# deep-learning

./: .gitignore  README.md
cnns/: Checkpoints_example.ipynb  UNet.ipynb
transformers/lrn_bigram_models/: Bigram_Trigram.ipynb  nepali_names.txt
transformers/trnsfmr_from_scratch/: .gitignore  data.py  english.txt  main.ipynb  main.py  pyproject.toml  spanish.txt
transformers/trnsfmr_from_scratch/models/: __init__.py  embedding.py  encoder.py  nn.py  scaled-dot-product-attention.py  scaled_dot_product_attention.py
transformers/trnsfmr_from_scratch/utils/: data_loader.py  tokenize.py
