[project]
name = "trnsfmr-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy<2",
    "pip>=25.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "torchtext==0.17.0",
    "torchvision>=0.17.0",
]

#[tool.uv]
#required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]
